added link to recipe

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/Omelette.html">Omelette</a>
+        <a href="recipes/Garlic_chicken.html">Garlic Chicken</a>
     </body>
 </html>
