--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/Omelette.html">Omelette</a>
-        <a href="recipes/Garlic_chicken.html">Garlic Chicken</a>
+       <p><a href="recipes/Garlic_chicken.html">Garlic Chicken</a></p>
     </body>
 </html>
