Added link to new recipe

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <h1>Odin Recipes</h1>
         <a href="recipes/Omelette.html">Omelette</a>
        <p><a href="recipes/Garlic_chicken.html">Garlic Chicken</a></p>
+       <p><a href="recipes/Spiced_lamb.html">Spiced Lamb Meatball Stew</a></p>
     </body>
 </html>
