--- a/recipes/Spiced_lamb.html
+++ b/recipes/Spiced_lamb.html
@@ -26,3 +26,5 @@
     <li>Tip the onion into the pan and fry for 7 minutes until softened. Stir through the garlic cumin, coriander and cinnamon, and cook for 1 minute. Add the harrisa, tomatoes and lamb stock, and bring to a simmer. Stir through the chickpeas and meatballs, season and simmer for 10-15 minutes until slightly reduced and the meatballs are cooked through.</li>
     <li>Stir through half the herbs, then scatter the rest on top along with the pomegranate seeds.</li>
 </ol>
+
+<h2><a href="https://www.bbcgoodfood.com/recipes/spiced-lamb-meatball-stew">Source</a></h2>
