--- a/recipes/Garlic_chicken.html
+++ b/recipes/Garlic_chicken.html
@@ -19,3 +19,5 @@
     <li>Slide the first breast into the mayo mix and using a spoon, make sure it is coated all over Pick it up by the pointy end and place on the crumbs. Use a spoon to cover completely with crumbs and press them on gently until covered all over. Pick up once again by the 'tail' and place on the prepared baking tray. Repeat with the second breast, then discard any leftover mayo and crumbs.</li>
     <li>Bake for 25-30 minutes or until golden and cooked through (check the centre of the chicken with the point of a knife). Transfer to a board and slice into three or four thick slices, scatter over the chives and serve with the lemon wedges, roasted potatoes and tomatoes, if you like.</li>
 </ol>
+
+<h2><a href="https://www.bbcgoodfood.com/recipes/crunchy-garlic-chicken">Source</a></h2>
